feat(planner): add styled PDF export for grocery list and meal plan
- Why: Grocery list download produced a plain .txt file despite the
  button saying "Download PDF". Weekly planner had no export option.
- What: Add jspdf dependency and shared generatePDF utility with
  SmartPlate branding (logo, #2F7F6D primary, #E9C46A accent,
  #F4A261 orange). GroceryListDialog now exports a real PDF with
  categorized items, checkboxes, quantity pills, and summary.
  WeeklyPlanner gains a "Download PDF" button producing a styled
  PDF with color-coded meal types, daily calorie badges, and
  weekly summary. Both PDFs include header with logo, accent bar,
  and branded footer.
- Impact: Professional PDF exports for grocery and planner. EN/FR
  i18n keys added for planner.downloadPDF and planner.downloaded.

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -170,6 +170,8 @@
   "planner.totalCalories": "Calories totales",
   "planner.noMeals": "Pas encore de repas.",
   "planner.addOne": "En ajouter un",
+  "planner.downloadPDF": "Telecharger le plan hebdomadaire PDF",
+  "planner.downloaded": "Planning telecharge !",
 
   "planner.day.monday": "Lundi",
   "planner.day.tuesday": "Mardi",
