--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -170,6 +170,8 @@
   "planner.totalCalories": "Total Calories",
   "planner.noMeals": "No meals yet.",
   "planner.addOne": "Add one",
+  "planner.downloadPDF": "Download PDF",
+  "planner.downloaded": "Meal plan downloaded!",
 
   "planner.day.monday": "Monday",
   "planner.day.tuesday": "Tuesday",
