refactor(planner,i18n): translate meal types, sort meals, and tighten PDF layout
- Translate meal type labels via t('tag.${type}') instead of raw strings
- Sort meals: breakfast > lunch > snack > dinner in UI and PDFs
- Reduce vertical spacing between blocks in grocery and planner PDFs
- Update footer URL to smartplate.fr
- Update download button labels in EN/FR

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -170,7 +170,7 @@
   "planner.totalCalories": "Total Calories",
   "planner.noMeals": "No meals yet.",
   "planner.addOne": "Add one",
-  "planner.downloadPDF": "Download PDF",
+  "planner.downloadPDF": "Download weekly plan",
   "planner.downloaded": "Meal plan downloaded!",
 
   "planner.day.monday": "Monday",
