--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -170,7 +170,7 @@
   "planner.totalCalories": "Calories totales",
   "planner.noMeals": "Pas encore de repas.",
   "planner.addOne": "En ajouter un",
-  "planner.downloadPDF": "Telecharger le plan hebdomadaire PDF",
+  "planner.downloadPDF": "Telecharger le plan hebdomadaire",
   "planner.downloaded": "Planning telecharge !",
 
   "planner.day.monday": "Lundi",
