feat(profile,i18n): allow custom allergies/intolerances in preferences
- Why: users could only select from 6 hardcoded allergies; the backend
  already supports arbitrary strings (max 20, 100 chars each)
- What: add text input + Add button below predefined badges, show custom
  allergies as removable badges with X, enforce max 20 limit with message,
  reject empty/duplicate (case-insensitive) entries, support Enter key
- Impact: users can now track any allergy (e.g. Lactose, Sesame); EN/FR
  i18n keys added for add button, placeholder, and max-reached message

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -344,6 +344,9 @@
   "profile.customizeDietary": "Customize your dietary restrictions",
   "profile.allergies": "Allergies & Intolerances",
   "profile.allergiesDesc": "Select ingredients you want to avoid in recipes",
+  "profile.addCustomAllergy": "Add",
+  "profile.allergyPlaceholder": "e.g. Sesame, Lactose...",
+  "profile.allergyMaxReached": "Maximum 20 allergies reached",
   "profile.savePreferences": "Save Preferences",
   "profile.preferencesSaved": "Preferences saved",
   "profile.failedSavePrefs": "Failed to save preferences",
