--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -344,6 +344,9 @@
   "profile.customizeDietary": "Personnalisez vos restrictions alimentaires",
   "profile.allergies": "Allergies & Intolérances",
   "profile.allergiesDesc": "Sélectionnez les ingrédients à éviter dans les recettes",
+  "profile.addCustomAllergy": "Ajouter",
+  "profile.allergyPlaceholder": "ex. Sésame, Lactose...",
+  "profile.allergyMaxReached": "Maximum 20 allergies atteint",
   "profile.savePreferences": "Enregistrer les préférences",
   "profile.preferencesSaved": "Préférences enregistrées",
   "profile.failedSavePrefs": "Échec de l'enregistrement des préférences",
