feat(i18n): add EN/FR labels for week navigation
- Why: new week navigation UI needs translated labels
- What: add 4 keys per locale — previousWeek, nextWeek, today, weekRange
- Impact: full EN/FR coverage for planner week navigation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -172,6 +172,10 @@
   "planner.addOne": "Add one",
   "planner.downloadPDF": "Download weekly plan",
   "planner.downloaded": "Meal plan downloaded!",
+  "planner.previousWeek": "Previous week",
+  "planner.nextWeek": "Next week",
+  "planner.today": "Today",
+  "planner.weekRange": "Week of {start}",
 
   "planner.day.monday": "Monday",
   "planner.day.tuesday": "Tuesday",
