feat(i18n): rename planner.today to Current week / Semaine courante
- Why: "Today" was misleading for a week-level navigation button
- What: update planner.today label in EN and FR locale files
- Impact: full EN/FR coverage maintained

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -174,7 +174,7 @@
   "planner.downloaded": "Meal plan downloaded!",
   "planner.previousWeek": "Previous week",
   "planner.nextWeek": "Next week",
-  "planner.today": "Today",
+  "planner.today": "Current week",
   "planner.weekRange": "Week of {start}",
 
   "planner.day.monday": "Monday",
