--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -174,7 +174,7 @@
   "planner.downloaded": "Planning telecharge !",
   "planner.previousWeek": "Semaine précédente",
   "planner.nextWeek": "Semaine prochaine",
-  "planner.today": "Aujourd'hui",
+  "planner.today": "Semaine courante",
   "planner.weekRange": "Semaine du {start}",
 
   "planner.day.monday": "Lundi",
