feat(ui): rework analysis card with translated labels and dynamic content
- Why: balance showed raw English enum, hydration was hardcoded (always
  1.5L/2.5L at 60%), nutrient values had no visual feedback
- What:
  - Remove hardcoded hydration section (not backed by AI data)
  - Translate balance labels via i18n (Excellent/Bon/À améliorer)
  - Display AI-generated balanceExplanation text
  - Add nutrient color coding (green/yellow/red based on target ratio)
  - Make balance card full-width for better layout with explanation
  - Use dynamic unit display from AI response (g, mg, etc.)
  - Add EN/FR keys: balanceExcellent, balanceGood, balanceNeedsImprovement
  - Rename macronutrients → Nutritional Breakdown / Détail nutritionnel
  - Remove unused hydration/composition i18n keys
- Impact: richer, translated analysis display; EN/FR coverage maintained

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -147,11 +147,10 @@
   "mealInput.analyzeAI": "Analyze with AI",
 
   "analysis.mealBalance": "Meal Balance",
-  "analysis.compositionLooks": "Your meal composition looks",
-  "analysis.keepUp": "Keep up the good work!",
-  "analysis.hydration": "Hydration",
-  "analysis.drinkMore": "Drink 1 more liter to reach your goal",
-  "analysis.macronutrients": "Macronutrients",
+  "analysis.balanceExcellent": "Excellent",
+  "analysis.balanceGood": "Good",
+  "analysis.balanceNeedsImprovement": "Needs Improvement",
+  "analysis.macronutrients": "Nutritional Breakdown",
   "analysis.addMore": "Add More",
   "analysis.reduce": "Reduce",
 
