feat(ui,ai-coach): add MealRecap comprehensive analysis summary card
- Why: analysis results were scattered across AIAnalysisCard and
  SmartSuggestions with no single consolidated view
- What: new MealRecap component with 3 sections (your meal, AI analysis,
  AI recommendations), balanceExplanation added to AnalysisDataDTO,
  12 i18n keys (EN/FR), rendered below SmartSuggestions on dashboard
- Impact: improved UX with at-a-glance overview of full meal analysis,
  full EN/FR i18n coverage

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -476,5 +476,18 @@
   "contact.socialTitle": "Follow Us",
   "contact.socialDesc": "Stay updated with the latest features and nutrition tips.",
   "contact.feedbackTitle": "Feedback",
-  "contact.feedbackDesc": "Your feedback helps us improve SmartPlate. Don't hesitate to share your ideas and suggestions!"
+  "contact.feedbackDesc": "Your feedback helps us improve SmartPlate. Don't hesitate to share your ideas and suggestions!",
+
+  "recap.title": "Full Analysis Recap",
+  "recap.yourMeal": "Your Meal",
+  "recap.aiAnalysis": "AI Analysis",
+  "recap.aiRecommendations": "AI Recommendations",
+  "recap.estimatedCalories": "Estimated Calories",
+  "recap.nutrient": "Nutrient",
+  "recap.value": "Value",
+  "recap.target": "Target",
+  "recap.status": "Status",
+  "recap.missingNutrients": "Missing Nutrients",
+  "recap.overconsumption": "Overconsumption",
+  "recap.suggestions": "Suggestions"
 }
